[package]
name = "ftml2html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftml = { path = "RuFoundation/ftml" }    # https://github.com/SCPru/RuFoundation
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
